--- a/multifilepicker/src/main/res/layout/activity_file_picker_simple.xml
+++ b/multifilepicker/src/main/res/layout/activity_file_picker_simple.xml
@@ -36,55 +36,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview_file"
+    <FrameLayout
+        android:id="@+id/container_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <RelativeLayout
-        android:id="@+id/container_loadingView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical">
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/text_loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_loading"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:textAlignment="center"
-                android:layout_gravity="center"
-                android:gravity="center"/>
-        </LinearLayout>
-    </RelativeLayout>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_done"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="15dp"
-        android:src="@drawable/ic_check_black"
-        android:scaleType="fitCenter"
-        android:tint="@color/colorWhite"
-        app:backgroundTint="@color/colorPrimary"
-        app:rippleColor="#DDDDDDDD"
-        android:clickable="true"
-        android:visibility="invisible"/>
+        android:layout_height="match_parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
