--- a/multifilepicker/src/main/res/layout/activity_file_picker_tabbed.xml
+++ b/multifilepicker/src/main/res/layout/activity_file_picker_tabbed.xml
@@ -36,12 +36,24 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_main"
+    <RelativeLayout
+        android:id="@+id/container_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </android.support.design.widget.TabLayout>
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tab_main"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/container_loadingView"
