--- a/multifilepicker/src/main/res/layout/layout_open_explorer.xml
+++ b/multifilepicker/src/main/res/layout/layout_open_explorer.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:id="@+id/container_file"
+        android:id="@+id/container_viewpager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="10dp"
@@ -39,6 +39,6 @@
         android:background="@color/colorGrey"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_below="@+id/container_file"/>
+        android:layout_below="@+id/container_viewpager"/>
 
 </RelativeLayout>
