--- a/multifilepicker/src/main/res/layout/activity_file_picker_simple.xml
+++ b/multifilepicker/src/main/res/layout/activity_file_picker_simple.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rzilyn.github.multifilepicker.FilePickerSimpleActivity">
+    tools:context="com.rzilyn.github.multifilepicker.FilePickerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -39,6 +39,7 @@
     <FrameLayout
         android:id="@+id/container_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize"/>
 
 </android.support.design.widget.CoordinatorLayout>
