--- a/multifilepicker/src/main/res/layout/fragment_file_picker_simple.xml
+++ b/multifilepicker/src/main/res/layout/fragment_file_picker_simple.xml
@@ -8,8 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_file"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
 
