--- a/multifilepicker/src/main/res/values/styles.xml
+++ b/multifilepicker/src/main/res/values/styles.xml
@@ -19,5 +19,13 @@
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white</item>
     </style>
 
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/colorPrimary</item>
+    </style>
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 
 </resources>
